--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -9,8 +9,7 @@ on:
         type: choice
         default: all
         options:
-          - smoke
-          - regression
+          - bug
           - all
 
 permissions:
